# Pedestrian_Detection

./: .gitignore  CMakeLists.txt  HOGDetectorForOpenCV.txt  HardExample_FromINRIA_NegList.txt  INRIANegativeImageList.txt  INRIAPerson96X160PosList.txt  MORE.md  NoPersonFromINRIAList.txt  README.md  SVM_HOG.xml  crop_image.cpp  dataset.h  find_save_HardExample.cpp  image_detect.cpp  main.cpp  my_svm.h  pedestrians128x64  pedestrians128x64.txt  peopledetect.cpp  video_detect.cpp
